# mayflypass

./: README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: app.rs  constants.rs  lib.rs  main.rs
api/src/database/: account.rs  account_lib.rs  captchat.rs  challenge.rs  constants.rs  error.rs  mod.rs  password.rs  storage.rs  token.rs
api/src/database/migrations/: 0001_init.sql  0002_add_token.sql  0003_encryption_keys.sql
api/src/server/: account.rs  captchat.rs  error.rs  json.rs  middleware.rs  mod.rs  state.rs  testing.rs
api/src/server/account/: info.rs  mod.rs  update_password.rs
api/src/server/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
api/src/server/extractor/: json_input.rs  mod.rs
api/src/server/lib/: cookies.rs  mod.rs  token.rs
api/src/server/storage/: mod.rs  select.rs  upsert.rs
app/: .gitignore  .metadata  Makefile  README.md  pubspec.yaml
app/android/app/: build.gradle.kts  proguard-rules.pro
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  router.dart
app/lib/api/: api.dart  errors.dart  (+5 more)
app/linux/: CMakeLists.txt
app/test/: api_account_test.dart  api_auth_test.dart  api_error_test.dart  api_storage_test.dart  api_test.dart  cypher_test.dart  database_storage_test.dart  http_test.dart  otpauth_parser_test.dart  secure_derive_test.dart  secure_encrypt_test.dart  secure_test.dart  storage_test.dart  widget_test.dart
app/windows/: CMakeLists.txt
proto/: databox.proto
web/ui/: index.html  package-lock.json  package.json  vitest.config.ts
(+111 files in other folders)
