[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0", features = ["any", "postgres", "sqlite", "migrate", "chrono", "json", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
scrypt = "0.12.0"
rand = "0.10.1"
hex = "0.4"
subtle = "2"
uuid = { version = "1.23.2", features = ["serde", "v4", "v7"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
