[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0", features = ["any", "postgres", "sqlite", "migrate", "chrono", "json", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["serde", "v4", "v7"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
getrandom = "0.4.2"
argon2 = "0.5.3"
captcha = "1.0.0"
axum = "0.8.9"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-test = "20.1.0"
sha2 = "0.11.0"
hex = "0.4.3"
serde_trim = "1.1.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
cookie = "0.18.1"
